fix more layout issues

--- a/0x03-responsive_design/02-1-styles.css
+++ b/0x03-responsive_design/02-1-styles.css
@@ -220,21 +220,21 @@
 
   @media screen and (max-width: 767px) {
     :root {
-        --section-padding: 5rem 1.5rem;
-        --section-body-padding: 2rem 0 0;
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
     }
 
     ul.row, .row {
-        flex-direction: column;
-        margin: 0;
+      flex-direction: column;
+      margin: 0;
     }
 
     [class*='col-'] {
-        margin: 0 0 3rem 0;
+      margin: 0 0 3rem 0;
     }
 
     .col-1-3, .col-1-2 {
-        width: 100%;
+      width: 100%;
     }
   }
   
@@ -285,6 +285,12 @@
   .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+  }
+
+  @media screen and (max-width: 767px) {
+    .navbar-menu {
+      display: none;
+    }
   }
   
   /* Header
